// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package hashicorp.consul.proxystate.v1alpha1;

message IPPortAddress {
  string ip = 1;
  uint32 port = 2;
}

message HostPortAddress {
  string host = 1;
  uint32 port = 2;
}

message UnixSocketAddress {
  string path = 1;
  uint32 mode = 2;
}